@@ -37,6 +37,9 @@ __thiscall void PlayerManager::TriggerRoomClear();
 "a1????????8b80????????83e010":
 static bool PlayerManager::CoopBabiesOnly();
 
+"558bec6aff68????????64a1????????5081ecfc000000535657a1????????33c5508d45??64a3????????8bd9":
+__thiscall void PlayerManager::RemoveCoPlayer(Entity_Player *player);
+
 struct PlayerManager depends (RNG)
 {
     RNG _rng : 0x0; //0x0
